# KraFight

./: .gitignore  CMakeLists.txt  LICENSE
KraFight/: CMakeLists.txt  KraFight.sln
KraFight/KraFight/: KraFight.vcxproj  KraFight.vcxproj.filters
KraFight/KraFight/source/KraFight/: Consts.h  Context.h  Game.cpp  Game.h  TypeDef.cpp  TypeDef.h  main.cpp
KraFight/KraNetwork/: KraNetwork.vcxproj  KraNetwork.vcxproj.filters  packages.config
KraFight/KraNetwork/source/KraNetwork/: main.cpp
KraFight/KraRenderer/: KraRenderer.vcxproj  KraRenderer.vcxproj.filters
KraFight/KraRenderer/source/KraRenderer/: GameRenderer.cpp  GameRenderer.h  main.cpp
KraFight/include/KraFight/: Context.h  Game.h
KraFight/include/KraFight/Behavior/: Attack.h  AttackInstance.h  StateMachine.h  StateMachineManager.h  TimelineAction.h  TimelineActionFactory.h  TimelineResource.h
KraFight/include/KraFight/Detail/: AnyPtr.h  Handle.h
KraFight/include/KraFight/Entity/: Entity.h  EntityManager.h
KraFight/include/KraFight/Hitbox/: HitIdChecklist.h  HitIdGenerator.h  HitProperties.h  HitboxCollection.h  HitboxManager.h  HurtboxCollection.h
KraFight/include/KraFight/Hook/: HookCustomEventManager.h  HookEvents.h  HookManager.h  IHook.h
KraFight/include/KraFight/Input/: InputBuffer.h  InputManager.h
KraFight/include/KraFight/Math/: FixedPoint.h
KraFight/include/KraFight/Network/: HasFunc.h  NetBuffer.h  NetLoadBuffer.h  NetSaveBuffer.h
KraFight/include/KraFight/Resource/: ResourceManager.h  ResourceStorage.h
KraFight/source/KraFight/: Game.cpp  TypeDef.cpp
KraFight/source/KraFight/Behavior/: Attack.cpp  AttackInstance.cpp  StateMachineManager.cpp  TimelineActionFactory.cpp  TimelineResource.cpp
KraFight/source/KraFight/Detail/: AnyPtr.cpp
KraFight/source/KraFight/Entity/: Entity.cpp  EntityManager.cpp
KraFight/source/KraFight/Hitbox/: HitIdChecklist.cpp  HitIdGenerator.cpp  HitboxCollection.cpp  HitboxManager.cpp  HurtboxCollection.cpp
KraFight/source/KraFight/Hook/: HookCustomEventManager.cpp  HookEvents.cpp  HookManager.cpp
KraFight/source/KraFight/Input/: InputBuffer.cpp  InputManager.cpp
KraFight/source/KraFight/Network/: HasFunc.cpp  NetSaveBuffer.cpp
KraFight/source/KraFight/Physics/: PhysicsManager.cpp  PhysicsObject.cpp
KraGame/: CMakeLists.txt  imgui.ini  thing.json
KraGame/Resources/: 5m.json  SmallJab.json  SmallJab2.json  SmallJab3.json  idle.json
KraGame/include/KraGame/: Application.h  Consts.h  GameRenderer.h  Hook.h
KraGame/include/KraGame/Detail/: StringParse.h
KraGame/include/KraGame/Gameplay/: Player.h
KraGame/include/KraGame/Graphics/: AnimationResource.h  AttackResource.h  EntityRenderer.h  GraphicsEvents.h  IAttackEvent.h  Renderer.h  ResourceManager.h
KraGame/include/KraGame/Graphics/AttackEvents/: AttackEventSetAnimation.h  AttackEventSetAnimationFrame.h  AttackEventSetHitbox.h
KraGame/include/KraGame/Tools/: AttackBuilder.h  FileBrowser.h  ImGuiExt.h  Toolbar.h
KraGame/source/KraGame/: GameRenderer.cpp  Hook.cpp  main.cpp
KraGame/source/KraGame/Detail/: StringParse.cpp
KraGame/source/KraGame/Graphics/: AnimationResource.cpp  AttackResource.cpp  EntityRenderer.cpp  ResourceManager.cpp
KraGame/source/KraGame/Graphics/AttackEvents/: AttackEventSetAnimation.cpp  AttackEventSetAnimationFrame.cpp  AttackEventSetHitbox.cpp
KraGame/source/KraGame/Tools/: AttackBuilder.cpp  FileBrowser.cpp  ImGuiExt.cpp  Toolbar.cpp
KraGame/source/imgui/imgui/: imgui_demo.cpp
KraNet/: CMakeLists.txt
KraNet/include/KraNet/: Address.h  Callbacks.h  ConnectionQuality.h  Consts.h  InputBuffer.h  KraNetSession.h  NetInputBuffer.h  NetPacket.h  Packet.h  Peer.h  PeerManager.h  PingTest.h  Session.h  Settings.h  Time.h  Types.h
KraNet/include/KraNet/Detail/: RingBufferStatic.h
KraNet/include/KraNet/Network/: KraNetHeader.h  Socket.h  UDPSocket.h
KraNet/source/KraNet/: InputBuffer.cpp  KraNetSession.cpp  NetInputBuffer.cpp  NetPacket.cpp  Packet.cpp  Peer.cpp  PeerManager.cpp  Session.cpp
KraNet/source/KraNet/Network/: KraNetHeader.cpp  UDPSocket.cpp
KraNet/source/KraPunchClient/: StunClient.cpp
KraRenderer/: CMakeLists.txt  imgui.ini
KraRenderer/include/KraRenderer/: GameRenderer.h
KraRenderer/source/KraRenderer/: GameRenderer.cpp  main.cpp
(+112 files in other folders)
